# CMakeList.txt : CMake project for Mango_Matrix, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Mango_Matrix "m_matrix.cpp" "m_matrix.hpp")

# TODO: Add tests and install targets if needed.
